--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
